--- a/WebContent/WEB-INF/zul/replication/index.zul
+++ b/WebContent/WEB-INF/zul/replication/index.zul
@@ -40,6 +40,13 @@
 							value="Enter the name of the targeted index" />
 					</row>
 					<row>
+						<label value="User name: " />
+						<textbox value="@{replication.item.login}"
+							width="95%" />
+						<label
+							value="User name login for authentication (or empty if no rights are required)" />
+					</row>
+					<row>
 						<label value="API Key: " />
 						<textbox value="@{replication.item.apiKey}"
 							width="95%" />
