Adding record number in url browser

--- a/WebContent/WEB-INF/zul/crawler/web/url.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/url.zul
@@ -130,6 +130,10 @@
 					constraint="no negative, no zero, no negative"
 					value="@{searchUrl.pageSize}" forward="onChange=onSearch" />
 				<space width="50px" />
+				<label value="Total record number: " />
+				<longbox readonly="true"
+					value="@{searchUrl.recordNumber}" />
+				<space width="50px" />
 				<button label="Export URLs…" forward="onExportURLs" />
 			</listfooter>
 		</listfoot>
