--- a/WebContent/WEB-INF/zul/scheduler/index.zul
+++ b/WebContent/WEB-INF/zul/scheduler/index.zul
@@ -20,24 +20,138 @@
 		<panelchildren>
 			<grid>
 				<columns sizable="false">
-					<column align="right" width="100px" />
-					<column align="left" width="300px" />
+					<column align="right" width="150px" />
 					<column align="left" />
 				</columns>
 				<rows>
 					<row>
 						<label value="Job name: " />
-						<textbox value="@{scheduler.item.name}"
-							width="95%" />
-						<label value="Enter the name of the job" />
+						<textbox value="@{scheduler.currentJob.name}"
+							cols="50" />
 					</row>
 					<row>
-						<label value="Cron expression " />
-						<textbox value="@{scheduler.item.cron}"
-							width="95%" />
-						<button target="_blank"
-							label="Syntax documentation"
-							href="http://en.wikipedia.org/wiki/CRON_expression" />
+						<vbox>
+							<label value="Cron expression " />
+							<button target="_blank"
+								label="Documentation"
+								href="http://en.wikipedia.org/wiki/CRON_expression" />
+						</vbox>
+						<grid>
+							<columns>
+								<column label="Seconds" />
+								<column label="Minutes" />
+								<column label="Hours" />
+								<column label="Day of month" />
+								<column label="Month" />
+								<column label="Day of week" />
+								<column label="Year" />
+							</columns>
+							<rows>
+								<row>
+									<textbox
+										value="@{scheduler.currentJob.cron.seconds}" width="95%" />
+									<textbox
+										value="@{scheduler.currentJob.cron.minutes}" width="95%" />
+									<textbox
+										value="@{scheduler.currentJob.cron.hours}" width="95%" />
+									<textbox
+										value="@{scheduler.currentJob.cron.dayOfMonth}" width="95%" />
+									<textbox
+										value="@{scheduler.currentJob.cron.month}" width="95%" />
+									<textbox
+										value="@{scheduler.currentJob.cron.dayOfWeek}" width="95%" />
+									<textbox
+										value="@{scheduler.currentJob.cron.year}" width="95%" />
+								</row>
+							</rows>
+						</grid>
+					</row>
+					<row>
+						<label value="Tasks " />
+						<listbox
+							model="@{scheduler.currentJob.tasks}">
+							<listhead>
+								<listheader width="200px" label="Task" />
+								<listheader label="Properties" />
+								<listheader align="center" width="120px"
+									label="action" />
+							</listhead>
+							<auxhead>
+								<auxheader>
+									<listbox
+										model="@{scheduler.taskEnum}" mold="select"
+										selectedItem="@{scheduler.selectedTask}" />
+								</auxheader>
+								<auxheader>
+									<grid
+										visible="@{scheduler.currentTask.task.property}"
+										model="@{scheduler.currentTask.properties}">
+										<columns>
+											<column width="150px"
+												align="right" />
+											<column />
+										</columns>
+										<rows>
+											<row
+												self="@{each='property'}">
+												<label
+													value="@{property.name}" />
+												<combobox
+													model="@{property.valueList}" value="@{property.value}"
+													selectedItem="@{property.value}" />
+											</row>
+										</rows>
+									</grid>
+								</auxheader>
+								<auxheader align="center">
+									<button tooltiptext="Add a task"
+										image="/images/action_add.png" forward="onTaskAdd" />
+								</auxheader>
+							</auxhead>
+							<listitem self="@{each='taskItem'}">
+								<listcell>
+									<label value="@{taskItem.task.name}" />
+								</listcell>
+								<listcell>
+									<listbox
+										visible="@{taskItem.task.property}"
+										model="@{taskItem.properties}">
+										<listhead>
+											<listheader align="right"
+												width="150px" />
+											<listheader />
+										</listhead>
+										<listitem
+											self="@{each='property2'}">
+											<listcell>
+												<label
+													value="@{property2.name}" />
+												<label value=": " />
+											</listcell>
+											<listcell
+												label="@{property2.value}" />
+										</listitem>
+									</listbox>
+								</listcell>
+								<listcell>
+									<custom-attributes
+										taskitem="@{taskItem}" />
+									<button
+										tooltiptext="Move the task up" image="/images/arrow_top.png"
+										onClick="scheduler.onTaskUp(self)" />
+									<button
+										tooltiptext="Move the task down"
+										image="/images/arrow_down.png"
+										onClick="scheduler.onTaskDown(self)" />
+									<space />
+									<button
+										tooltiptext="Remove the task"
+										image="/images/action_delete.png"
+										onClick="scheduler.onTaskRemove(self)" />
+								</listcell>
+							</listitem>
+						</listbox>
+						<label value="Task list" />
 					</row>
 				</rows>
 				<foot>
